--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = mac-pyxa
-version = 0.0.3
+version = 0.0.5
 author = Stephen Kaplan
 author_email = stephen.kaplan@maine.edu
-description = A package for running AppleScript using Python syntax.
+description = A package for accomplish AppleScript automation tasks using Python syntax.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/SKaplanOfficial/PyXA
