--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mac-pyxa
-version = 0.0.8
+version = 0.0.8.3
 author = Stephen Kaplan
 author_email = stephen.kaplan@maine.edu
 description = A package for accomplish AppleScript automation tasks using Python syntax.
@@ -17,3 +17,8 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.6
+install_requires = 
+    numpy == 1.23.2
+    pyobjc == 8.5
+    requests == 2.28.1
+    beautifulsoup4 == 4.11.1
