--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mac-pyxa
-version = 0.1.2
+version = 0.2.0
 author = Stephen Kaplan
 author_email = stephen.kaplan@maine.edu
 description = A package for accomplish AppleScript automation tasks using Python syntax.
@@ -18,7 +18,6 @@ classifiers =
 packages = find:
 python_requires = >=3.10
 install_requires = 
-    numpy == 1.23.4
-    pyobjc == 8.5.1
+    pyobjc == 9.*
     requests == 2.28.1
     beautifulsoup4 == 4.11.1
