Reduce pyobjc dependency to required frameworks -- Resolve #5

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,17 @@ classifiers =
 packages = find:
 python_requires = >=3.10
 install_requires = 
-    pyobjc == 9.*
-    requests == 2.28.1
-    beautifulsoup4 == 4.11.1
+    pyobjc-core == 9.*
+    pyobjc-framework-AVFoundation == 9.*
+    pyobjc-framework-EventKit == 9.*
+    pyobjc-framework-Quartz == 9.*
+    pyobjc-framework-ScriptingBridge == 9.*
+    pyobjc-framework-NaturalLanguage == 9.*
+    pyobjc-framework-CoreLocation == 9.*
+    pyobjc-framework-Vision == 9.*
+    pyobjc-framework-CoreMedia == 9.*
+    pyobjc-framework-Photos == 9.*
+    pyobjc-framework-Speech == 9.*
+    pyobjc-framework-LatentSemanticMapping == 9.*
+    requests == 2.28.*
+    beautifulsoup4 == 4.11.*
