--- a/setup.cfg
+++ b/setup.cfg
@@ -30,5 +30,8 @@ install_requires =
     pyobjc-framework-Photos == 9.*
     pyobjc-framework-Speech == 9.*
     pyobjc-framework-LatentSemanticMapping == 9.*
+    pyobjc-framework-ApplicationServices == 9.*
+    pyobjc-framework-CoreText == 9.*
     requests == 2.28.*
     beautifulsoup4 == 4.11.*
+    macimg == 0.0.2
