--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
     pyobjc-framework-LatentSemanticMapping == 9.*
     pyobjc-framework-ApplicationServices == 9.*
     pyobjc-framework-CoreText == 9.*
+    pyobjc-framework-libdispatch == 9.*
     requests == 2.28.*
     beautifulsoup4 == 4.11.*
     macimg == 0.0.3
