--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mac-pyxa
-version = 0.3.0
+version = 0.3.0.1
 author = Stephen Kaplan
 author_email = stephen.kaplan@maine.edu
 description = A package for accomplish AppleScript automation tasks using Python syntax.
@@ -33,6 +33,7 @@ install_requires =
     pyobjc-framework-ApplicationServices == 9.*
     pyobjc-framework-CoreText == 9.*
     pyobjc-framework-libdispatch == 9.*
+    pyobjc-framework-datadetection == 9.*
     requests == 2.28.*
     beautifulsoup4 == 4.11.*
     macimg == 0.0.3
